Navbar redesign implemented, not responsive at smaller screens

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,12 @@
     />
     <script src="https://kit.fontawesome.com/2c0d7e85ca.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Site Builder</title>
   </head>
   <body>
